# myfirst

./: .replit  api_utils.py  app.py  cache_manager.py  config.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/py-yfinance/: cookies.db-shm  cookies.db-wal
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
static/css/: docs.css
static/js/: docs.js
templates/: docs.html
